# nps

./: LICENSE  README.md  claude.md  community-one-pager.md  example_analysis.py  napari_plugin_infrastructure_analysis.ipynb  notebook_import_example.py  nps_analysis.ipynb  pyproject.toml  requirements.txt  run_analysis.py  simple_analysis.py  urssi-fellowship-proposal.md
analysis/: plugin_analyzer.py
data/: github_repos.csv
reports/: compatibility_analysis.csv  ecosystem_analysis_report.md  ecosystem_analysis_summary.json  ecosystem_health.csv  ecosystem_report_20250926_145409.md  github_activity.csv  latest_ecosystem_report.md  napari_dependencies.csv  plugins_needing_attention.csv  python_version_support.csv  testing_infrastructure.csv  top_performing_plugins.csv
scripts/: collect_jsons.py  github_repos.py
src/nps/: __init__.py  analysis.py  io.py
