[project]
name = "plugin-sustainability"
version = "0.1.0"
description = "napari plugin sustainability efforts and organization"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tim Monko" },
    { email = "timmonko@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "requests>=2.28.0",
    "pandas>=1.5.0",
    "matplotlib>=3.6.0",
    "seaborn>=0.12.0",
    "numpy>=1.21.0",
    "plotly>=5.0.0",
    "kaleido>=0.2.1"
]
