[project]
name = "nps"
version = "0.1.0"
description = "napari plugin sustainability efforts and organization"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Tim Monko" },
    { email = "timmonko@gmail.com" },
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "seaborn>=0.12.0",
    "numpy>=1.21.0",
]

[dependency-groups]
dev = [
    "ipykernel",
    "requests",
    "plotly",
    "kaleido",
]